--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>AnimateFX</artifactId>
             <version>1.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.27</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
