--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,16 @@
             <artifactId>pdfbox</artifactId>
             <version>2.0.27</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version><!-- Ai -->
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>15.0.1</version> <!-- Ai -->
+        </dependency>
     </dependencies>
     <build>
         <plugins>
