--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <version>2.0.27</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>fontbox</artifactId>
+            <version>2.0.24</version>
+        </dependency>
+        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20231013</version><!-- Ai -->
