--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,11 @@
             <artifactId>AnimateFX</artifactId>
             <version>1.2.0</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.27</version>
+            <version>2.0.24</version>
         </dependency>
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
@@ -64,6 +65,11 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
             <version>15.0.1</version> <!-- Ai -->
+        </dependency>
+        <dependency>
+            <groupId>com.calendarfx</groupId>
+            <artifactId>view</artifactId>
+            <version>11.12.6</version>
         </dependency>
     </dependencies>
     <build>
